try going back to java 11 due to lombok issues